# template-fastapi

./: .dockerignore  .env._example  .env.example  .env.hotel.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 113b1d5ef203_add_ai_summary_and_ai_summary_updated_.py  9eea59675ee4_add_zalo_instagram_tiktok_to_channel_.py  c40668857d93_test_auto_import.py
app/: main.py
app/admin/: __init__.py  filters.py  views.py
app/api/: documents.py  examples.py  messaging.py  pages.py  router.py  tasks.py  users.py
app/api/features/: __init__.py
app/api/integrations/: __init__.py  gmail.py  messenger.py  router.py
app/api/lib/: __init__.py  llm.py
app/api/lib/langchain/: llm.py  (+1 more)
app/api/webhooks/: __init__.py  messenger.py  router.py
app/core/: __init__.py  admin.py  autodiscover.py  celery.py  config.py  database.py  dependencies.py  openapi_tags.py  task_context.py  templates.py
app/dependencies/: __init__.py  api.py  core.py
app/extensions/: __init__.py
app/extensions/_example/: __init__.py  admin.py  config.py  models.py  router.py  schedules.py  service.py  tasks.py
app/features/omni_channel/: __init__.py  admin.py  models.py  router.py  service.py  tasks.py
app/features/voice/: __init__.py  api.py  models.py  router.py  service.py
app/integrations/: __init__.py
app/integrations/deepgram/: __init__.py  client.py  config.py  stt.py  tts.py
app/integrations/docling/: __init__.py  config.py  converter.py  text_extractor.py
app/integrations/gmail/: __init__.py  api.py  client.py  config.py  dependencies.py  router.py  service.py  types.py  utils.py
app/integrations/langchain/: __init__.py  llm.py
app/integrations/livekit/: __init__.py  api.py  client.py  config.py  router.py  service.py  test.html  webhooks.py
app/integrations/messenger/: __init__.py  api.py  client.py  config.py  dependencies.py  formatters.py  router.py  schemas.py  sender.py  service.py  types.py  utils.py  webhook.py  webhooks.py
app/integrations/mistral/: __init__.py  config.py  text_extractor.py
app/integrations/netdocuments/: __init__.py  client.py  config.py  types.py  utils.py
app/integrations/salesforce/: __init__.py  api.py  client.py  config.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
app/integrations/telnyx/: __init__.py  api.py  client.py  config.py  provider.py  router.py  service.py  webhooks.py
app/lib/: __init__.py
app/lib/docling/: __init__.py  cli.py  converter.py  dependencies.py  schemas.py
app/lib/document_processing/: __init__.py  api.py  base.py  cli.py  dependencies.py  factory.py  router.py  schemas.py  service.py
app/lib/documentation/: __init__.py  api.py  base.py  cli.py  dependencies.py  schemas.py
app/lib/langchain/: __init__.py  config.py  dependencies.py  llm.py
app/lib/llm/: __init__.py  api.py  base.py  config.py  dependencies.py  factory.py  instructor.py  resources.py  router.py  settings.py  utils.py
app/lib/telephony/: __init__.py  base.py  config.py  dependencies.py  factory.py  schemas.py
app/lib/utils/: __init__.py  file.py  retry.py
app/lib/vectorstore/: __init__.py  config.py  dependencies.py  service.py
app/lib/voice/: __init__.py  base.py  config.py  dependencies.py  factory.py
app/models/: __init__.py  base.py  example.py  messaging.py  user.py
app/resources/: __init__.py
app/resources/llm/: __init__.py
app/schemas/: __init__.py  gmail.py  messaging.py  messenger.py  user.py
app/services/: __init__.py  base_crud.py  example_service.py  gmail_service.py  gmail_service_dependencies.py  llm_service.py  messaging_service.py  user_service.py
app/services/handlers/: __init__.py  channel_message_default.py  channel_message_registry.py
app/services/rate_limiter/: __init__.py  redis_rate_limiter.py
app/tasks/: __init__.py  channel_tasks.py  example_tasks.py
app/templates/sqladmin/: layout.html
app/utils/: __init__.py  auto_import.py  serialization.py  timezone.py  validators.py
docker/: Dockerfile  Dockerfile.celery
docs/: EXTENSIONS.md  architecture.md  tech-stack.md
docs/architecture/: autodiscover-system.md  module-structure.md
docs/extensions/: EXTENSIONS.md  README.md  message-handlers.md  messenger.md
docs/guides/: development.md
docs/patterns/: extension-domains.md  lib-integrations.md  libraries.md  logging.md  prompts.md  schemas.md  testing.md
envs/extensions/: _example.example.env
envs/integrations/: deepgram.example.env  gmail.example.env  livekit.example.env  messenger.example.env  mistral.example.env  netdocuments.example.env  salesforce.example.env  telnyx.example.env
envs/lib/: llm.example.env  vectorstore.example.env
envs/workers/: voice-agent.env.example
scripts/: export_openapi.py  force_drop_all_tables.py  merge_env_files.sh  seed_test_data.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
templates/partials/: footer.html  header.html
tests/: README.md  conftest.py  gmail.http  messenger.http  test_celery.py  test_docling_cli.py  test_example.py  test_extension_system.py  test_health.py  test_messaging_api.py  test_messaging_service.py
tests/extensions/: conftest.py
(+184 files in other folders)
