[project]
name = "template-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "greenlet>=3.0.0",
    "scalar-fastapi>=1.0.0",
    "celery[redis]>=5.5.3",
    "redis[hiredis]>=5.0.0",
    "flower>=2.0.1",
    "celery-redbeat>=2.2.0",
    "sqladmin>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "langchain-groq>=0.3.8",
    "python-dotenv>=1.1.1",
    "html2text>=2025.4.15",
    "numexpr>=2.10.0",
    "asgiref>=3.10.0",
    "langchain-google-genai>=2.1.12",
    "pandas>=2.3.3",
    "snowflake>=1.8.0",
    "snowflake-sqlalchemy>=1.7.7",
    "simple-salesforce>=1.12.9",
    "docling[tesserocr]>=2.63.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "app"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services (celery worker, etc.)",
]
