[project]
name = "template-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "greenlet>=3.0.0",
    "scalar-fastapi>=1.0.0",
    "celery[redis]>=5.5.3",
    "redis[hiredis]>=5.0.0",
    "flower>=2.0.1",
    "celery-redbeat>=2.2.0",
    "sqladmin>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "langchain-groq>=0.3.8",
    "python-dotenv>=1.1.1",
    "html2text>=2025.4.15",
    "numexpr>=2.10.0",
    "asgiref>=3.10.0",
    "langchain-google-genai>=2.1.12",
    "pandas>=2.3.3",
    "snowflake>=1.8.0",
    "snowflake-sqlalchemy>=1.7.7",
    "simple-salesforce>=1.12.9",
    "docling[tesserocr]>=2.63.0",
    "mistralai>=1.0.0",
    # Voice AI integrations
    "livekit>=0.17.0",
    "livekit-api>=0.8.0",
    "livekit-agents>=0.11.0",
    "livekit-plugins-deepgram>=0.6.0",
    "livekit-plugins-silero>=0.6.0",
    "livekit-plugins-langchain>=1.0.0",
    "deepgram-sdk>=3.10.0",
    "telnyx>=2.1.0",
    "instructor>=1.13.0",
    "google-genai>=1.0.0",
    # PDF conversion
    "weasyprint>=67.0",
    "markdown-it-py>=3.0",
    "pygments>=2.18",
    "mdit-py-plugins>=0.4",
    "pymupdf4llm>=0.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services (celery worker, etc.)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

# PyTorch CUDA strategy: exclude NVIDIA Python packages (~3GB), install CUDA libs via apt (~1.5GB)
# pytorch-cpu index lacks torch 2.6+ wheels; using PyPI torch + CUDA runtime in Docker
# See: docker/Dockerfile for CUDA lib installation
[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux' and platform_machine == 'x86_64'"]
override-dependencies = [
    "nvidia-cublas-cu12 ; sys_platform == 'never'",
    "nvidia-cuda-cupti-cu12 ; sys_platform == 'never'",
    "nvidia-cuda-nvrtc-cu12 ; sys_platform == 'never'",
    "nvidia-cuda-runtime-cu12 ; sys_platform == 'never'",
    "nvidia-cudnn-cu12 ; sys_platform == 'never'",
    "nvidia-cufft-cu12 ; sys_platform == 'never'",
    "nvidia-curand-cu12 ; sys_platform == 'never'",
    "nvidia-cusolver-cu12 ; sys_platform == 'never'",
    "nvidia-cusparse-cu12 ; sys_platform == 'never'",
    "nvidia-cusparselt-cu12 ; sys_platform == 'never'",
    "nvidia-nccl-cu12 ; sys_platform == 'never'",
    "nvidia-nvjitlink-cu12 ; sys_platform == 'never'",
    "nvidia-nvtx-cu12 ; sys_platform == 'never'",
    "nvidia-cufile-cu12 ; sys_platform == 'never'",
    "nvidia-nvshmem-cu12 ; sys_platform == 'never'",
    "triton ; sys_platform == 'never'",
]
